[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/managers/stats_mgr.tscn" type="PackedScene" id=1]
[ext_resource path="res://tests/stats_test/stat_mgr_test.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/text.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/managers/structure_mgr.gd" type="Script" id=4]
[ext_resource path="res://tests/stats_test/stat_value.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/stat_display.tscn" type="PackedScene" id=6]

[node name="stat_mgr_test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StatsMgr" parent="." instance=ExtResource( 1 )]
debug = true

[node name="FunctioningStructuresCount" type="VBoxContainer" parent="."]
margin_left = 660.124
margin_top = 35.3864
margin_right = 967.124
margin_bottom = 102.386
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StructureMgr" type="Node" parent="."]
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 222.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 222.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 144.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Seconds Per Year"

[node name="SecondsPerYearSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 222.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 222.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 194.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Year Signal Timer Active"

[node name="YearSignalTimerActiveCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 198.0
margin_right = 222.0
margin_bottom = 24.0
grow_horizontal = 0
align = 2

[node name="SignalYearBtn" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 222.0
margin_bottom = 76.0
text = "Signal Year"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopulationLabel" type="Label" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 222.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 3 )
text = "population
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YearSignalTimer" type="Timer" parent="."]

[node name="StatValues" type="VBoxContainer" parent="."]
margin_left = 400.0
margin_top = 34.0
margin_right = 628.0
margin_bottom = 74.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatValue" parent="StatValues" instance=ExtResource( 5 )]

[node name="StatDisplay" parent="." instance=ExtResource( 6 )]
margin_left = 248.064
margin_top = 17.9594
margin_right = 407.064
margin_bottom = 68.9594
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SecondsPerYearSpinBox" to="." method="_on_SecondsPerYearSpinBox_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/YearSignalTimerActiveCheckBox" to="." method="_on_YearSignalTimerActiveCheckBox_toggled"]
[connection signal="pressed" from="VBoxContainer/SignalYearBtn" to="." method="_on_SignalYearBtn_pressed"]
[connection signal="timeout" from="YearSignalTimer" to="." method="_on_YearSignalTimer_timeout"]
